# pyUtil

./: README.md  pyproject.toml
src/localUtil/: Docs.py  Games.py  Math.py  Structures.py  __init__.py  util.py
src/localUtil.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/localUtil/Database/: Database.py
src/localUtil/Docs/: Docs.py  __init__.py  example.py
src/localUtil/Games/: Game.py  minimax.py
